force-app/main/default/objects/DASALES_Porcentajedecobro__c/DASALES_Porcentajedecobro__c.object-meta.xml
<CustomObject>
    <label>Porcentaje de cobro</label>
    <nameField>
        <displayFormat>PC-{000000}</displayFormat>
        <label>Porcentage de cobro Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Porcentajes de cobro</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>