force-app/main/default/objects/DASALES_Porcentajedecobro__c/fields/DSALES_Anios__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Anios__c</fullName>
    <label>Años</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>