force-app/main/default/objects/DASALES_Porcentajedecobro__c/fields/DSALES_Porcentaje__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Porcentaje__c</fullName>
    <label>Porcentaje</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>