force-app/main/default/objects/DASALES_Porcentajedecobro__c/fields/DSALES_Product__c.field-meta.xml
<CustomField>
    <fullName>DSALES_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Servicio</label>
    <referenceTo>Product2</referenceTo>
    <relationshipName>Porcentages_de_cobro</relationshipName>
    <type>Lookup</type>
</CustomField>